fix(notifications-toast): Fix alignment of dismiss button relative to Toast content

--- a/packages/notifications-toast/src/notificationsToast.scss
+++ b/packages/notifications-toast/src/notificationsToast.scss
@@ -93,6 +93,6 @@
 
 .hig__toast__dismiss {
   position: absolute;
-  top: -7.5px; /* Aligns first line of message to match the IconButton height */
+  top: -9px; /* Aligns first line of message to match the IconButton height */
   right: 0;
 }
